Fix sheet alignment

--- a/pages/settings/general/view/style.scss
+++ b/pages/settings/general/view/style.scss
@@ -6,5 +6,8 @@
 }
 
 .sheet {
-  fill: $grape-4;
+  svg {
+    display: block;
+    fill: $grape-4;
+  }
 }
